--- a/server/pom.xml
+++ b/server/pom.xml
@@ -69,6 +69,12 @@
             <version>20190722</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.30</version>
+        </dependency>
+
     </dependencies>
 
 </project>
