--- a/core/pom.xml
+++ b/core/pom.xml
@@ -28,14 +28,14 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>3.3.0</version>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>3.3.0</version>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
 
