--- a/server/pom.xml
+++ b/server/pom.xml
@@ -15,6 +15,7 @@
       <plugins>
         <plugin>
           <artifactId>maven-assembly-plugin</artifactId>
+          <version>3.3.0</version>
           <configuration>
             <archive>
               <manifest>
