--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -7,7 +7,8 @@ plugins {
 group 'de.redsix'
 version '1.0.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 1.11
+targetCompatibility = 1.11
 
 gradlePlugin {
     plugins {
