--- a/server/pom.xml
+++ b/server/pom.xml
@@ -76,6 +76,12 @@
             <version>1.7.30</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.beust</groupId>
+            <artifactId>jcommander</artifactId>
+            <version>1.81</version>
+        </dependency>
+
     </dependencies>
 
 </project>
