--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           java-version: 1.11
       - name: Publish package
-        run: cd gradle-plugin && gradle publish
+        run: cd gradle-plugin && ./gradlew publish
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
