Add Sonatype Snapshots Repository to Gradle build

--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -43,6 +43,9 @@ publishing {
 }
 
 repositories {
+    maven {
+        url "https://oss.sonatype.org/content/repositories/snapshots"
+    }
     mavenCentral()
     mavenLocal()
 }
