--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -22,9 +22,9 @@ gradlePlugin {
 publishing {
     publications {
         maven(MavenPublication) {
-            groupId = 'de.redsix'
+            groupId = project.group
             artifactId = 'dmn-check-gradle-plugin'
-            version = '1.2.0-SNAPSHOT'
+            version = project.version
 
             from components.java
         }
@@ -57,7 +57,7 @@ repositories {
 }
 
 dependencies {
-    compile group: 'de.redsix', name: 'dmn-check-plugin-base', version: '1.2.0-SNAPSHOT'
+    compile group: 'de.redsix', name: 'dmn-check-plugin-base', version: project.version
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
