--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'de.redsix'
-version '1.2.0'
+version '1.2.1-SNAPSHOT'
 
 sourceCompatibility = 1.11
 targetCompatibility = 1.11
