--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,13 @@ name: Java CI
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
+      - 'release/*'
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
+      - 'release/*'
 
 jobs:
   build-dmn-check:
