--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
 
   build-gradle-plugin:
     runs-on: ubuntu-latest
-
+    needs: build-dmn-check
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.11
