--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,11 @@ jobs:
         with:
           fetch-depth: 2
       - name: Set up JDK 1.11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.11
+          java-version: '11'
+          distribution: 'adopt'
+          cache: maven
       - name: Build with Maven
         run: mvn clean install jacoco:report -P checkerframework
       - uses: codecov/codecov-action@v1
@@ -37,8 +39,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.11
+          java-version: '11'
+          distribution: 'adopt'
+          cache: maven
       - name: Build with Gradle
         run: cd gradle-plugin && ./gradlew build
