--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,9 +9,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up Maven Central Repository
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.11
+          java-version: '11'
+          distribution: 'adopt'
+          cache: maven
           server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
@@ -24,7 +26,7 @@ jobs:
 
       - name: Publish package
         run: |
-          mvn clean deploy \
+          mvn clean install deploy \
             --batch-mode \
             --update-snapshots \
             --activate-profiles release \
@@ -32,32 +34,36 @@ jobs:
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
-      - name: Previous succeeded job
-        id: success
-        uses: actions/cache@v2
-        with:
-          path: success-job-${{ github.sha }}-${{ matrix.name }}
-          key: success-job-job-${{ github.sha }}-${{ matrix.name }}
-
 
   publish-gradle-plugin:
     runs-on: ubuntu-latest
     needs: publish-dmn-check
     steps:
       - uses: actions/checkout@v2
-      - name: Composer cache
-        if: steps.success.outputs.cache-hit != 'true'
-        uses: actions/cache@v2
-        with:
-         path: vendor
-         key: composer-${{ hashFiles('composer.lock') }}
-      - run: echo "done" > success-job-${{ github.sha }}-${{ matrix.name }}
       - name: Set up Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.11
+          java-version: '11'
+          distribution: 'adopt'
+          cache: maven
       - name: Publish package
-        run: cd gradle-plugin && ./gradlew publish
+        run: cd gradle-plugin && ./gradlew publishToSonatype
         env:
-          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+          ORG_GRADLE_PROJECT_sonatypeUsername: ${{ secrets.OSSRH_USERNAME }}
+          ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.OSSRH_TOKEN }}
+          ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }}
+          ORG_GRADLE_PROJECT_signingKey: ${{ secrets.GPG_KEY_NEW }}
+
+  nexus-staging-release:
+            runs-on: ubuntu-latest
+            needs: publish-gradle-plugin
+            steps:
+              - uses: actions/checkout@v2
+              - name: Set up Java
+                uses: actions/setup-java@v2
+                with:
+                  java-version: '11'
+                  distribution: 'adopt'
+                  cache: maven
+              - name: Release package from Nexus staging
+                run: mvn --activate-profiles release nexus-staging:release
