--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dmn-check</artifactId>
         <groupId>de.redsix</groupId>
-        <version>1.3.0-SNAPHOST</version>
+        <version>1.3.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
