--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group 'de.redsix'
-version '1.2.1-SNAPSHOT'
+version '1.2.0'
 
 sourceCompatibility = 1.11
 targetCompatibility = 1.11
