--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -7,8 +7,8 @@ plugins {
 }
 
 group 'de.redsix'
-version '1.2.0'
 description 'Gradle Plugin for the DMN analysis tool dmn-check'
+version '1.2.1-SNAPSHOT'
 
 sourceCompatibility = 1.11
 targetCompatibility = 1.11
