--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -7,6 +7,7 @@ plugins {
 }
 
 group 'de.redsix'
+description 'Gradle Plugin for the DMN analysis tool dmn-check'
 version '1.3.0-SNAPSHOT'
 
 sourceCompatibility = 1.11
