--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -8,7 +8,7 @@ plugins {
 
 group 'de.redsix'
 description 'Gradle Plugin for the DMN analysis tool dmn-check'
-version '1.2.1-SNAPSHOT'
+version '1.2.1'
 
 sourceCompatibility = 1.11
 targetCompatibility = 1.11
