--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,9 @@
         <derive4j.version>1.1.1</derive4j.version>
 
         <compiler-plugin.version>3.8.1</compiler-plugin.version>
+
+        <sonar.organization>red6</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <build>
