--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 2
+          fetch-depth: 0 # Disabling shallow clone is recommended for improving relevancy of reporting
       - name: Set up JDK 1.11
         uses: actions/setup-java@v2
         with:
