--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,7 @@ name: Java CI
 on:
   push:
   pull_request:
-    branches:
-      - master
-      - 'release/*'
+    types: [opened, synchronize, reopened]
 
 jobs:
   build-dmn-check:
