--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,9 @@ name: Java CI
 
 on:
   push:
+    branches:
+      - master
+      - 'release/*'
   pull_request:
     types: [opened, synchronize, reopened]
 
