--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -88,6 +88,12 @@
             <version>3.8.4</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
