--- a/validators/pom.xml
+++ b/validators/pom.xml
@@ -30,6 +30,13 @@
             <version>3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
