--- a/camunda-modeler-plugin/package.json
+++ b/camunda-modeler-plugin/package.json
@@ -16,10 +16,10 @@
     "dmn-check"
   ],
   "devDependencies": {
-    "camunda-modeler-plugin-helpers": "^3.4.0-alpha.1",
+    "camunda-modeler-plugin-helpers": "^5.1.0",
     "npm-run-all": "^4.1.5",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.10"
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "min-dash": "^3.8.1"
