Specify the Nexus staging repository id
(cherry picked from commit f117285c3d351a111813bacf7cbf0ea69d4489ca)

--- a/pom.xml
+++ b/pom.xml
@@ -281,6 +281,7 @@
                         <configuration>
                             <serverId>ossrh</serverId>
                             <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <stagingRepositoryId>dmn-check-staging-repo</stagingRepositoryId>
                         </configuration>
                     </plugin>
                     <plugin>
