--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,13 +27,7 @@ jobs:
           distribution: 'adopt'
           cache: maven
       - name: Build with Maven
-        run: mvn clean install jacoco:report -P checkerframework
-      - uses: codecov/codecov-action@v3.1.1
-        with:
-          directory: .
-          name: codecov
-          fail_ci_if_error: true
-
+        run: mvn clean install -P checkerframework
 
 
   sonarcloud:
