--- a/plugin-base/pom.xml
+++ b/plugin-base/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dmn-check</artifactId>
         <groupId>de.redsix</groupId>
-        <version>1.3.0-SNAPSHOT</version>
+        <version>1.3.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -14,13 +14,13 @@
         <dependency>
             <groupId>de.redsix</groupId>
             <artifactId>dmn-check-core</artifactId>
-            <version>1.3.0-SNAPSHOT</version>
+            <version>1.3.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>de.redsix</groupId>
             <artifactId>dmn-check-validators</artifactId>
-            <version>1.3.0-SNAPSHOT</version>
+            <version>1.3.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
