Switch to EdwarDDay/upgrade-gradle-action

--- a/.github/workflows/update-gradle-wrapper.yml
+++ b/.github/workflows/update-gradle-wrapper.yml
@@ -5,5 +5,24 @@ jobs:
   update-gradle-wrapper:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: gradle-update/update-gradle-wrapper-action@v1.0.18
+      - name: checkout
+        uses: actions/checkout@v2
+
+      - name: update gradle
+        id: gradleUpdate
+        uses: EdwarDDay/upgrade-gradle-action@v1
+        with:
+          working-directory: gradle-plugin
+
+      - name: create pull request
+        uses: peter-evans/create-pull-request@v3
+        with:
+          commit-message: "Update gradle to ${{ steps.gradleUpdate.outputs.gradle-version }}"
+          branch: "gradle_update/version_${{ steps.gradleUpdate.outputs.gradle-version }}"
+          delete-branch: true
+          title: "Update gradle to ${{ steps.gradleUpdate.outputs.gradle-version }}"
+          body: |
+            ${{ steps.gradleUpdate.outputs.version-information }}
+
+            Automated changes by [create-pull-request](https://github.com/peter-evans/create-pull-request) GitHub action
+          labels: "dependencies,gradle"
