--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -19,9 +19,9 @@ repositories {
 }
 
 dependencies {
-    compile group: 'de.redsix', name: 'dmn-check-plugin-base', version: project.version
+    implementation group: 'de.redsix', name: 'dmn-check-plugin-base', version: project.version
 
-    testCompile group: 'junit', name: 'junit', version: '4.13.2'
+    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 }
 
 gradlePlugin {
