Enable reproducible builds in Gradle
See https://docs.gradle.org/current/userguide/working_with_files.html#sec:reproducible_archives

--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -46,6 +46,11 @@ javadoc {
     }
 }
 
+tasks.withType(AbstractArchiveTask).configureEach {
+    preserveFileTimestamps = false
+    reproducibleFileOrder = true
+}
+
 nexusPublishing {
     repositories {
         sonatype()
