Specify the version of the palantir Java formatter

--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,7 @@
                 <configuration>
                     <java>
                         <palantirJavaFormat>
+                            <version>2.43.0</version>
                             <style>PALANTIR</style>
                             <formatJavadoc>true</formatJavadoc>
                         </palantirJavaFormat>
