--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,7 @@ jobs:
         uses: step-security/harden-runner@17d0e2bd7d51742c71671bd19fa12bdc9d40a3d6 # v2.8.1
         with:
           egress-policy: audit
+          allowed-endpoints: sonarcloud.io:443
 
       - name: Checkout
         if: ${{ github.event_name != 'pull_request_target' }}
