Upgrade convention properties for Java for compatibiltiy with Gradle 9.0

--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -10,8 +10,11 @@ group 'de.redsix'
 description 'Gradle Plugin for the DMN analysis tool dmn-check'
 version '1.4.0-SNAPSHOT'
 
-sourceCompatibility = 1.17
-targetCompatibility = 1.17
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
 
 repositories {
     mavenLocal()
