Let Gradle sign all publications

--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -117,7 +117,7 @@ signing {
             //useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
 
             //Apply signing to publication identity 'publishing.publications.maven'
-            sign publishing.publications.pluginMaven
+            sign publishing.publications
             sign publishing.publications.simplePluginPluginMarkerMaven
         } else {
             println 'WARNING: No property \'signingKey\' found. Artifact signing will be skipped.'
